--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next": "^13.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "resend": "^0.15.1",
     "ress": "^5.0.2"
   },
   "devDependencies": {
